--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
             <h3>Human-Machine Interface for Robots</h3>
             <p>Designed an intuitive control system for robotic manipulators using real-time feedback.</p>
         </div>
+        <div class="project-card">
+            <h3>Cosmos GUI for Robotics</h3>
+            <p>Created an advanced graphical interface for controlling and monitoring robotic systems.</p>
+        </div>
+        <div class="project-card">
+            <h3>S-Curve Trajectory Planner</h3>
+            <p>Implemented smooth trajectory planning for robotic motion with velocity and acceleration constraints.</p>
+        </div>
+        <div class="project-card">
+            <h3>CAN Bus Communication for ODrive</h3>
+            <p>Developed a robust communication system for motor control over CAN protocol.</p>
+        </div>
     </section>
     
     <section id="contact">
